Veränderungen und Fehlerbehebung
