# Backend/src/controller/addMovie.controller.js
@@ -5,9 +5,9 @@ import {wrapHandler} from "../utils.js";
 import RestifyError from "restify-errors";
 
 /**
- * HTTP-Controller-Klasse für Adressbucheinträge. Diese Klasse registriert
+ * HTTP-Controller-Klasse für Filmeinträge. Diese Klasse registriert
  * alle notwendigen URL-Handler beim Webserver für einen einfachen REST-
- * Webservice zum Lesen und Schreiben von Adressen.
+ * Webservice zum Lesen und Schreiben von Filmen.
  */
 export default class AddMovieController {
     /**
@@ -20,11 +20,11 @@ export default class AddMovieController {
         this._service = new AddMovieService();
         this._prefix = prefix;
 
-        // Collection: Adressen
+        // Collection: Filme
         server.get(prefix, wrapHandler(this, this.search));
         server.post(prefix, wrapHandler(this, this.create));
 
-        // Entity: Adresse
+        // Entity: Film
         server.get(prefix + "/:id", wrapHandler(this, this.read));
         server.put(prefix + "/:id", wrapHandler(this, this.update));
         server.patch(prefix + "/:id", wrapHandler(this, this.update));
@@ -51,8 +51,8 @@ export default class AddMovieController {
     }
 
     /**
-     * GET /address
-     * Adressen suchen
+     * GET /movie
+     * Filme suchen
      */
     async search(req, res, next) {
         let result = await this._service.search(req.query);
@@ -62,8 +62,8 @@ export default class AddMovieController {
     }
 
     /**
-     * POST /address
-     * Neue Adresse anlegen
+     * POST /movie
+     * Neuen Film anlegen
      */
     async create(req, res, next) {
         let result = await this._service.create(req.body);
@@ -77,8 +77,8 @@ export default class AddMovieController {
     }
 
     /**
-     * GET /address/:id
-     * Adresse auslesen
+     * GET /movie/:id
+     * Filme auslesen
      */
     async read(req, res, next) {
         let result = await this._service.read(req.params.id);
@@ -94,9 +94,9 @@ export default class AddMovieController {
     }
 
     /**
-     * PUT /address/:id
-     * PATCH /address/:id
-     * Adresse ändern
+     * PUT /movie/:id
+     * PATCH /movie/:id
+     * Filme ändern
      */
     async update(req, res, next) {
         let result = await this._service.update(req.params.id, req.body);
@@ -112,8 +112,8 @@ export default class AddMovieController {
     }
 
     /**
-     * DELETE /address/:id
-     * Adresse löschen
+     * DELETE /movie/:id
+     * Filme löschen
      */
     async delete(req, res, next) {
         await this._service.delete(req.params.id)
